banner section done

--- a/index.html
+++ b/index.html
@@ -124,6 +124,28 @@
                 </div>
             </div>
         </nav>
+        <!-- manu bar end  -->
+        
+
+        <!-- banner section start  -->
+
+        <section class="relative flex items-center justify-center bg-gradient-to-b from-[#111111] to-[#111111] ">
+            <img class="" src="./images/banner.png" alt="">
+            <div class="absolute flex flex-col gap-4">
+                <h1 class="text-center text-xl md:text-4xl lg:text-7xl text-white font-bold">
+                    We Provide Effective <br>Legal Solutions
+                </h1>
+                <p class="text-center text-[#E7E7E7] font-semibold text-xs md:text-sm lg:text-xl">
+                    There are many variations of passages of Lorem Ipsum available, but the majority <br>have suffered alteration in some form, by injected humour.
+                </p>
+                <div class="flex flex-row gap-4">
+                    <input class="flex-1 border-none outline-none rounded px-2 " type="text" placeholder="search your services">
+                    <button class="font-semibold rounded text-xl px-4 py-2 bg-button-color text-white">
+                        Search
+                    </button>
+                </div>
+            </div>
+        </section>
     </header>
 
     <!-- main secton  -->
