--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 </div>
                 <div class="navbar-end  cursor-pointer ">
                     <a class="font-semibold rounded text-xl px-4 py-2 bg-button-color hidden lg:flex">Free Consultation</a>
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <div class="dropdown  lg:hidden">
+                        <div tabindex="0" role="button" class="btn btn-ghost">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -130,7 +130,7 @@
         <!-- banner section start  -->
 
         <section class="relative flex items-center justify-center bg-gradient-to-b from-[#111111] to-[#111111] ">
-            <img class="" src="./images/banner.png" alt="">
+            <img class="w-11/" src="./images/banner.png" alt="">
             <div class="absolute flex flex-col gap-4">
                 <h1 class="text-center text-xl md:text-4xl lg:text-7xl text-white font-bold">
                     We Provide Effective <br>Legal Solutions
@@ -138,9 +138,9 @@
                 <p class="text-center text-[#E7E7E7] font-semibold text-xs md:text-sm lg:text-xl">
                     There are many variations of passages of Lorem Ipsum available, but the majority <br>have suffered alteration in some form, by injected humour.
                 </p>
-                <div class="flex flex-row gap-4">
-                    <input class="flex-1 border-none outline-none rounded px-2 " type="text" placeholder="search your services">
-                    <button class="font-semibold rounded text-xl px-4 py-2 bg-button-color text-white">
+                <div class=" flex  justify-center items-center flex-row lg:w-full md:w-24 w-16 mx-auto gap-4">
+                    <input class=" border-none md:flex-1  outline-none rounded px-2 py-1 md:py-2 " type="text" placeholder="search your services">
+                    <button class="font-semibold rounded text-xl px-4  bg-button-color py-1 md:py-2 text-white">
                         Search
                     </button>
                 </div>
