done Frequently Asked Any Questions section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         <!-- cliect section  -->
         <section class="py-20">
             <h1 class="text-center font-bold text-2xl md:text-4xl lg:text-6xl">What Our Client Say</h1>
-            <p class="text-center py-6 text-xs md:text-sm lg:text-lg text-gray-500 font-semibold">There are many variations
+            <p class="text-center py-6 text-xs md:text-sm lg:text-lg text-gray-500 font-semibold">There are many
+                variations
                 of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by
                 injected humour.</p>
             <div>
@@ -244,7 +245,8 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  flex justify-center items-center">
                         <img src="./images/slider-2.jpg" class="w-full h-[500px]" />
-                        <div class="absolute left-5 z-20 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <div
+                            class="absolute left-5 z-20 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                             <a href="#slide1" class="btn btn-circle">❮</a>
                             <a href="#slide3" class="btn btn-circle">❯</a>
                         </div>
@@ -264,7 +266,8 @@
                     </div>
                     <div id="slide3" class="carousel-item relative w-full flex justify-center items-center">
                         <img src="./images/slider-3.jpg" class="w-full h-[500px]" />
-                        <div class="absolute z-20 left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <div
+                            class="absolute z-20 left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                             <a href="#slide2" class="btn btn-circle">❮</a>
                             <a href="#slide1" class="btn btn-circle">❯</a>
                         </div>
@@ -283,6 +286,45 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </section>
+        <!-- Frequently section  -->
+        <section>
+            <h1 class="text-center font-bold text-2xl md:text-4xl lg:text-6xl">Frequently Asked Any Questions</h1>
+            <p class="text-center py-6 text-xs md:text-sm lg:text-lg text-gray-500 font-semibold">
+                There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered
+                alteration in some form, by injected humour.
+            </p>
+            <div class="flex flex-col md:flex-row ">
+                <div class="flex flex-col flex-1  gap-4 justify-evenly px-4">
+                    <div tabindex="0" class="collapse collapse-plus border-base-300 bg-base-200 border">
+                        <div class="collapse-title text-2xl font-bold">1. Are application fee waivers available?</div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                        </div>
+                    </div>
+                    <div tabindex="0" class="collapse collapse-plus border-base-300 bg-base-200 border">
+                        <div class="collapse-title text-2xl font-bold">2. Are application fee waivers available?</div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                        </div>
+                    </div>
+                    <div tabindex="0" class="collapse collapse-plus border-base-300 bg-base-200 border">
+                        <div class="collapse-title text-2xl font-bold">3. Are application fee waivers available?</div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                        </div>
+                    </div>
+                    <div tabindex="0" class="collapse collapse-plus border-base-300 bg-base-200 border">
+                        <div class="collapse-title text-2xl font-bold">4. Are application fee waivers available?</div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1">
+                    <img class="w-fit" src="./images/faq.png" alt="">
                 </div>
             </div>
         </section>
